# stickies-plus-plus

./: CMakeLists.txt  readme.md
include/: NoteWindow.h
resources/: note.txt  note1.txt
src/: NoteWindow.cpp  main.cpp
